# memo_conversion

./: .env.example  .gitignore  data_processor.py  loader.py  pyproject.toml
fields/: ages.py  base_fields.py  birth_years.py  boolean_fields.py  dates.py
memo_conversion/: data_processor.py  loader.py
memo_conversion/fields/: ages.py  birth_years.py  boolean_fields.py  dates.py
